<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_PD6_OUT" Id="{bde7b31f-d9d7-428f-886b-095bc0f826b8}">
    <Declaration><![CDATA[TYPE ST_PD6_OUT :
STRUCT
	ControlWord 	: UINT;
	HomingMethod 	: USINT;
	TargetVelocity 	: INT;
	ProfileVelocity : UDINT;
	Accel 			: UDINT;				
	Decel 			: UDINT;				
	SubmodeSelect	: UDINT;	
	OperationMode 	: SINT;	
	TargetPosition 	: DINT;		
	Polarity 		: USINT;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>